New update + video + fix
there will be more coming

--- a/news.html
+++ b/news.html
@@ -16,14 +16,14 @@
         <img id="logo" src="logo.png">
         <h1>Weekly News</h1>
         <hr>
-        <h2>Apple Upcoming Plans for M4 Processor</h2>
-        <p class="article">Apple plans to release MBAs with M4 chips in early 2025, according to Bloomberg.</p>
-        <p class="article">Just this spring the M3 chips were announced, but the M4 will most likely launch between January and March 2025.</p>
-        <p class="article">Both the 13 and 15-inch models will get the M4 chip along with a similar design to the M2 Air.</p>
-        <p class="article">This means that the MBA line will likely not be part of the rumored announcement next week, but they will update Macbook Pros, Mac Minis, and iMacs.</p>
-        <p class="article">Since the Mac Studio is currently using the M2 Max/Ultra, the M4 release could arrive after a March software release, meaning sometime between March and June. Apple is also working on an M4 Mac Pro, but no timeline was provided.</p>
-        <p class="article">In the spring, Apple is rumored to reveal a new iPhone SE, iPad Airs, upgraded iPad keyboards, and new entry level iPads. They also just release a seventh-gen iPad Mini, set to launch with the first phase of Apple Intelligence next week.</p>
-
+        <h2>Nintendo Switch 2 Announced</h2>
+        <p class="article">Nintendo has just dropped the long expected Switch 2, but gamers are concerned about pricing and availability amid new tarriffs.</p>
+        <p class="article">The Nintendo Switch 2 hardware is planned to feature 2 USB-C ports, a  new, bigger system and Joy-Con, slightly new pro controller, and a new dock with built-in cooling.</p>
+        <p class="article">A new piece of hardware will be joining the Switch 2 hardware, and that is the new camera. So far it is confirmed to work in the Mario Party Jamboree expansion pack - more on that later - and will cost 50 dollars with a whopping 480p resolution!</p>
+        <p class="article">Nintendo has done some things, particularly with pricing, that gamers are afraid of. For starters, their launch titles Mariokart World and Donkey Kong Bananza will be 80 and 70 dollars. Additionally, Switch 1 games will have upgrade packs which will likely be 10 dollars.</p>
+        <p class="article">The Switch 2 itself will be 450 dollars alone and 500 with the Mariokart World bundle, which is actually not a bad price for the console. Preorders have started and the console will release June 5th 2025.</p>
+        <p class="article">Some other things to know about the Switch 2: a new GameCube controller and emulator for NSO members, and for those who don't know the right joy con will recieve a mouse sensor.</p>
+        <p class="article">Are you going to get the switch 2? Let me know your thoughts in the form below!</p>
         <p>If you would like an article published about YOU or if you have any ideas for me, submit them here!</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVXsXQkKmyUrjmZAmHWjarFWdH2t9jzGvnV46g2k4LMYvleQ/viewform" 
         width="550" height="600" 
