--- a/weeklyindex.html
+++ b/weeklyindex.html
@@ -18,11 +18,12 @@
         <img id="logo" src="logo.png">
         <h1>Kellen Weekly</h1>
         <h2>Check out the videos, games, and more!</h2>
-        <p id="date"> Updated 3-30-24</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/61sTox2dyUI?si=VAIWUlHH5htlUPaq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>        <hr class="invisible">
+        <p id="date"> Updated 5-7-25</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/IHF9R00lZvs?si=6dlGrYtGI8RUCVxP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>      
+        <hr class="invisible">
         <a class="contentlink" href="quizhome.html">  Quiz of the Week 🤓 &#10145;&#65039;</a>
         <hr class="invisible">
-        <a class="contentlink" href="news.html">  Story Competition 📖 &#10145;&#65039;</a>
+        <a class="contentlink" href="news.html">  Weekly News 🗞️ &#10145;&#65039;</a>
         <hr class="invisible">
         <a class="contentlink" href="aboutme.html"> About Me</a>
     </body>
