made the quiz number 6

--- a/correct2.html
+++ b/correct2.html
@@ -14,13 +14,13 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Correct!</h1>
-        <h2>Who is known as “The Flying Fish” in the world of swimming?</h2>
+        <h2>How many infinity stones are there?</h2>
         <h1>
             <a href="question3.html">  Proceed! &#10145;&#65039;</a>
             </h1>
-        <p id="incorrect"> Ryan Lochte</p>
-        <p id="incorrect"> Caeleb Dressel</p>
-        <p id="correct"> Michael Phelps</p>
-        <p id="incorrect"> Mark Spitz</p>
+        <p id="incorrect"> 3</p>
+        <p id="incorrect"> 4</p>
+        <p id="correct"> 6</p>
+        <p id="incorrect"> 7</p>
     </body>
 </html>
