--- a/question3.html
+++ b/question3.html
@@ -14,10 +14,10 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Question Three</h1>
-        <h2>What is the highest score possible in a single frame of bowling?</h2>
-        <p> <a href="correct3.html"> &bull; 30</a> </p>
-        <p> <a href="wrong3.html"> &bull; 100</a> </p>
-        <p> <a href="wrong3.html"> &bull; 300</a> </p>
-        <p> <a href="wrong3.html"> &bull; 10</a> </p>
+        <h2>What was Dr. Strange's profession prior to becoming an Avenger?</h2>
+        <p> <a href="wrong3.html"> &bull; Scientist</a> </p>
+        <p> <a href="wrong3.html"> &bull; Dentist</a> </p>
+        <p> <a href="wrong3.html"> &bull; Homeless</a> </p>
+        <p> <a href="correct3.html"> &bull; Neurosurgeon</a> </p>
     </body>
 </html>
