--- a/correct1.html
+++ b/correct1.html
@@ -14,13 +14,13 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Correct!</h1>
-        <h2>Which country won the FIFA world cup in 2018?</h2>
+        <h2>Which movie kicked off the Marvel Cinematic Universe?</h2>
         <h1>
             <a href="question2.html">  Proceed! &#10145;&#65039;</a>
             </h1>
-        <p id="incorrect">Brazil</p>
-        <p id="incorrect">Germany</p>
-        <p id="correct">France</p>
-        <p id="incorrect">Argentina</p>
+        <p id="correct">Iron Man</p>
+        <p id="incorrect">Super Man</p>
+        <p id="incorrect">Spider Man</p>
+        <p id="incorrect">if ur reading this u r cool</p>
     </body>
 </html>
