--- a/question2.html
+++ b/question2.html
@@ -14,10 +14,10 @@
             <a href="./AJ">The Artem Zone</a>
           </div>
         <h1> Question Two</h1>
-        <h2>Who is known as “The Flying Fish” in the world of swimming?<h2>
-        <p> <a href="wrong2.html"> &bull; Ryan Lochte</a> </p>
-        <p> <a href="wrong2.html"> &bull; Caeleb Dressel</a> </p>
-        <p> <a href="correct2.html"> &bull; Michael Phelps</a> </p>
-        <p> <a href="wrong2.html"> &bull; Mark Spitz</a> </p>
+        <h2>How many infinity stones are there?<h2>
+        <p> <a href="wrong2.html"> &bull; 3</a> </p>
+        <p> <a href="wrong2.html"> &bull; 4</a> </p>
+        <p> <a href="correct2.html"> &bull; 6</a> </p>
+        <p> <a href="wrong2.html"> &bull; 7</a> </p>
     </body>
 </html>
