--- a/quizhome.html
+++ b/quizhome.html
@@ -13,8 +13,8 @@
             <a href="games.html">Games</a>
             <a href="./AJ">The Artem Zone</a>
           </div>
-        <h2>Quiz Category: Sports!</h2>
-        <img src="quiz5img.jpg">
+        <h2>Quiz No. 6 Category: Superheroes!</h2>
+        <img src="quizimages/quiz6img.jpg">
         <hr class = invisible>
         <a class="proceed" href="question1.html">  Proceed! &#10145;&#65039;</a>
     </body>
