--- a/wrong2.html
+++ b/wrong2.html
@@ -15,10 +15,10 @@
           </div>
         <h1> Incorrect!</h1>
         <a href="quizhome.html">  Start Over! &#10145;&#65039;</a>
-        <h2>Who is known as “The Flying Fish” in the world of swimming?</h2>
-        <p id="incorrect"> Ryan Lochte</p>
-        <p id="incorrect"> Caeleb Dressel</p>
-        <p id="correct"> Michael Phelps</p>
-        <p id="incorrect"> Mark Spitz</p>
+        <h2>How many infinity stones are there?</h2>
+        <p id="incorrect"> 3</p>
+        <p id="incorrect"> 4</p>
+        <p id="correct"> 6</p>
+        <p id="incorrect"> 7</p>
     </body>
 </html>
